--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,19 +10,19 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+    defaults:
+      run:
+        working-directory: ssd-webapp/webapp   # Set working directory to where your app and requirements.txt are
 
-    # -------------------------
-    # Python setup and tests
-    # -------------------------
+    steps:
+    - uses: actions/checkout@v3
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
 
-    - name: Install Python dependencies
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
@@ -44,9 +44,6 @@ jobs:
       run: |
         pkill -f app.py || true
 
-    # -------------------------
-    # Node.js / ESLint security
-    # -------------------------
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
